src/Components/Products/Products.css
.productsContainer {
    height: 100vh;
    width: 100vw;

    display: flex;
    flex-direction: row;
    align-items: center;

    /* background: url('./../../assets/Productsback.jpg'); */
    /* background-size: cover; */
    /* background-color: black; */
    /* background-position: left top; */
    
}
/************* LEFT SIDE *************/
.productsSideNav {
    /* margin-top: 60px; */
    height: 120%;
    width: 20vw;
    position: fixed;

    background-color: #2AAAE2;
    color: white;
    /* opacity: .9; */

    display: flex;

    text-align: left;
    flex-direction: column;
}

.navHeader {
    margin-top: 150px;
    /* margin-bottom: 15vh; */
    padding-left: 10px; 

    font-size: 25px;
    font-weight: lighter;
    /* background-color: blue; */
}
.navHeader a {
    color: white;
    text-underline-position: below;
}

.innerProducts {
    background-color: red;
    /* height: 90%; */
    width: 0%;
    display: flex;
    text-align: left;
    flex-direction: column;
    margin-top: 150px;
    margin-left: 80px;
    cursor: pointer;  

    font-size: 16px;
    /* font-weight: lighter; */
}
.innerProducts a {
    text-decoration: none;
    color: #ffffff;
    font-weight: lighter;
}

.innerProducts a:hover {
    /* border: thin solid black; */
    /* width: 10vw; */
    color: #808080;
}

/************* RIGHT SIDE *************/

.productsIntro {
    height: 100vh;
    width: 100vw;
    margin-left: 20vw;
    margin-top: 220px;

    /* border: thin solid black; */
    /* background-color: rgba(35, 34, 34, 0.61); */
}

.displayModal {
    position: fixed;

    /* margin-left: 45vw; */
    z-index: 5;
    transition: .5s;
}

.hideModal {
    position: fixed;
    left: -150px;
    right: 0;
    transition-delay: .15s;
    transition: .5s;
}
.productsHeader {
    color: #2AAAE2;
    /* margin-top: 50px; */
    margin-bottom: 100px;

    font-weight: lighter;
    font-size: 32px;

}

.productsDesc {
    width: 100%;
    /* height: 100%; */
    /* background-color: red; */

    display: flex;
    justify-content: space-between;
    /* flex-direction: column; */
    /* align-items: center; */

    color: black;
}

.descLeft {
    width: 50%;
    margin-left: 100px;
    /* background-color: red; */

    text-align: left;
}

.descLeft p {
    font-size: 15px;
    font-weight: lighter;
}

.descRight {
    height: 100%;
    width: 80%;
    display: flex;
    justify-content: center;
    align-items: center;
    /* margin-right: 50px; */
    /* background-color: red; */
}

.descRight img {
    height: 50vh;
    margin-left: 100px;
    /* width: 100vw; */
}

/************* ICONS *************/

.iconsContainer {
    width: 100%;
    /* height: 100%; */
    /* margin: 100px; */
    margin-top: 80px;
    display: flex;
    justify-content: space-around;
    /* align-items: center; */
    /* background: black; */
}

.indvIcon {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.prodIcon {
    color: #2AAAE2;
    font-size: 64px;
}

.iconDesc p {
    font-weight: lighter;
}


/************* DIVIDERS *************/
.style1 {
    width: 86%;
    
}
.style2 {
    width: 100%;
}
/************** TECH SECTION **************/

.techContainer {
    /* background-color: red; */
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}

.techHeader {
    color: #2AAAE2;
    height: 7vh;

    font-weight: lighter;
    font-size: 32px;
    /* background-color: red; */
}

.techDesc {
    width: 40%;
    font-weight: lighter;
}

.techSection {
    /* background-color: red; */
    margin-left: 100px;
    width: 86.5%;
    display: flex;
    justify-content: space-between;
    
}

.techLeft {
    width: 50%;
    display: flex;
    text-align: left;
    justify-content: space-between;

    /* background-color: blue; */
}

.techLeft ul {
    list-style-type: none;
    /* list-style-type: square; */
    font-weight: bold;
    width: 75%;
    
}

.indvTech {
    width: 100%;
    display: flex;
    justify-content: space-between;
}

.techIcon {
    font-size: 2.5vh;
    color: #808080;
    /* opacity: .7; */
}

.techRight {
    width: 50%;
    background-color: red;
    display: flex;
    justify-content: center;
    align-items: center;
}

/************** TESTIMONIAL SECTION **************/

.testimonialHeader {
    color: #2AAAE2;
    /* background-color: blue; */
    font-weight: lighter;
    font-size: 32px;
}

.testimonialContent {
    margin-left: 100px;
    width: 86.5%;

    display: flex;
    flex-direction: column;
    /* background-color: red; */
}

.indvTestimonial {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    /* width: 100%; */
    /* background-color: blue; */
    margin: 20px;
}

.testimonialImg {
    width: 50%;
    height: 100%;
    /* border: thin solid black; */
    /* box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.4); */
    /* background-color: red; */
}

.testimonialImg img {
    width: 95%;
    height: 100%;
    box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.4);

}

.testimonialQuote {
    width: 40%;
    height: 40vh;
    display: flex;
    flex-direction: column;
    align-content: center;
    align-items: center;
    justify-content: center;
    /* background-color: red; */
}

/************** ENDING JOIN US SECTION **************/

.joinusDesc {
    width: 86.5%;
    margin-left: 100px;
    font-weight: lighter;
    text-align: left;
    /* background-color: red; */
}
.getStartedEnding {
    margin-left: 100px;
    height: 300px;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    /* align-items: center; */
    /* background-color: black; */
}
.productpageForm {
    display: flex;
    width: 50%;
}
.inputBox {
    width: 100%;
    height: 40px;
}

.productpagegetStarted {
    width: 50%;
    height: 16.5%;
    border: thin solid green;
    font-size: 14px;
    color: green;
    border-radius: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}
.productpagegetStarted:hover {
    background-color: green;
    border: thin solid white;
    color: white;
    transition: .3s;
}
/************* FOOTER *************/
.productsFooterContainer {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    text-align: right;
    width: 86.5%;
    height: 100px;
    /* margin-left: 200px; */
    /* background-color: red; */
}
.mobileproductstopHeader {
    display: none;
}
.mobileproductsHeader {
    display: none;
}
.quadSection {
    display: none;
}
.mobileAssessmentContent {
    display: none;
}

/************* MOBILE VIEW *************/
@media (max-width:800px) {
    .productsContainer {
        display: inline;
        height: 100vh;
        width: 100vw;
        align-items: left;
        flex-direction: column;
        /* background-color: red; */
    }
    .productsIntro {
        display: none;
    }
    .productsSideNav {
        display: none;
    }
    .productsDesc {
        display: none;
    }

    .mobileproductstopHeader {
        display: flex;
        height: 100%;
        /* width: 100vw; */
        margin-top: 70px;
        margin-left: 12px;
        text-align: left;
        font-size: x-large;
        /* font-weight: lighter; */
        /* background-color: lightblue; */
    }

    .mobileproductsHeader {
        display: flex;
        width: 80%;
        text-align: left;
        /* margin-bottom: 100px; */
        margin-left: 12px;
        font-size: x-large;
        font-weight: lighter;
        /* background-color: lightblue; */
    }

    .quadSection {
        display: inline-flex;
        /* height: 40vh; */
        width: 100vw;
        /* display: flex; */
        flex-direction: column;
        /* background-color: lightblue; */
    }

    .topTwo {
        height: 20vh;
        width: 100vw;
        display: flex;
        flex-direction: row;
        justify-content: space-around;
        /* border-bottom: thin solid black; */
        /* background-color: blue; */
    }
    .bottomTwo {
        height: 20vh;
        width: 100vw;
        display: flex;
        flex-direction: row;
        justify-content: space-around;
        /* background-color: lightblue; */
    }

    .quadSingle {
        /* margin-top: 8px; */
        width: 40%;
        display: flex;
        flex-direction: column;
        text-align: center;
        align-items: center;
        justify-content: center;
        /* border: thin solid black; */
        font-weight: lighter;
        /* background-color: blue; */
    }
    .quadIcon {
        font-size: 6vh;
        color: #2AAAE2;
    }

    .mobileAssessmentContent {
        display: inline;
        /* height: 100%; */
        /* width: 100%; */
    }
    
}

